# Junkyard

./: .gitattributes  .gitignore  CLAUDE.md  Clean.bat  Clean.sh  LICENSE  README.md  Setup.bat  Setup.sh
.claude/: settings.local.json
art/: HighPolyBox.blend
code/: Application.cpp  Application.h  ApplicationAndroid.cpp  ApplicationMac.m  ApplicationMac.mm  ApplicationWin.cpp  AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  CommonTypes.h  Config.h  Engine.cpp  Engine.h  EngineLinux.cpp  JunkyardSettings.cpp  JunkyardSettings.h  RemoteServices.cpp  RemoteServices.h  UnityBuild.inl  VirtualFS.cpp  VirtualFS.h
code/Assets/: AssetManager.cpp  AssetManager.h  DEPENDS  Font.cpp  Font.h  Image.cpp  Image.h  Model.cpp  Model.h  Shader.cpp  Shader.h
code/Collision/: Collision.cpp  Collision.h  DEPENDS
code/Common/: Application.cpp  Application.h  ApplicationAndroid.cpp  ApplicationLinux.cpp  ApplicationMac.mm  ApplicationWin.cpp  Camera.cpp  Camera.h  Clipboard.cpp  Clipboard.h  CommonTypes.h  DEPENDS  InputTypes.h  JunkyardSettings.cpp  JunkyardSettings.h  Profiler.h  RemoteServices.cpp  RemoteServices.h  ThreadAllocatorArena.cpp  ThreadAllocatorArena.h  VirtualFS.cpp  VirtualFS.h
code/Core/: Allocators.cpp  Allocators.h  Array.h  Arrays.h  Atomic.h  Base.cpp  Base.h  BlitSort.h  Blobs.h  Buffers.cpp  Buffers.h  Config.h  Debug.cpp  Debug.h  DebugAndroid.cpp  DebugClang.cpp  DebugWin.cpp  FileIO.cpp  FileIO.h  FileIOPosix.cpp  FileIOWin.cpp  HandlePool.cpp  HandlePool.h  Hash.cpp  Hash.h  HashTable.cpp  HashTable.h  IncludeWin.h  IniParser.cpp  IniParser.h  Jobs.cpp  Jobs.h  JsonParser.cpp  JsonParser.h  Log.cpp  Log.h  Math.cpp  Math.h  MathAll.cpp  MathAll.h  (+28 more)
code/DebugTools/: BudgetViewer.cpp  BudgetViewer.h  DEPENDS  DebugDraw.cpp  DebugDraw.h  DebugHud.cpp  DebugHud.h  FrameInfoHud.cpp  FrameInfoHud.h
code/Graphics/: DEPENDS  DebugDraw.cpp  DebugDraw.h  Geometry.cpp  Geometry.h  GfxBackend.cpp  GfxBackend.h  GfxBackendTypes.h  GfxBackendVk.cpp  GfxTools.cpp  GfxTools.h  Graphics.cpp  Graphics.h  GraphicsVk.cpp  ImGuiWrapper.cpp  ImGuiWrapper.h  ImageVk.cpp  Model.cpp  Model.h  Shader.cpp  Shader.h  TextBuilder.cpp  TextBuilder.h  TracyVk.cpp  ValidateEnumsVk.inl
code/ImGui/: CousineFont.h  DEPENDS  ImGuiMain.cpp  ImGuiMain.h  ImGuiWrapper.cpp  ImGuiWrapper.h  ImGuizmo.cpp  ImGuizmo.h  SegoeFont.h
code/Math/: Math.h
code/Renderer/: Render.cpp  Render.h
code/Renderers/: DEPENDS  RForward.cpp  RForward.h
code/Shaders/: DebugDraw.hlsl  DrawText.hlsl  Fill.hlsl  FwdPlusLight.hlsl  ImGui.hlsl  LightCull.hlsl  LightCullDebug.hlsl  Model.hlsl  Quad.hlsl  Samplers.h.hlsl  TextureDebug.hlsl  Unlit.hlsl  ZPrepass.hlsl
code/Tests/: AssetTest.cpp  Test.cpp  TestAndroid.cpp  TestAsset.bat  TestAsset.cpp  TestAsset.sh  TestBasicGfx.bat  TestBasicGfx.cpp  TestBasicGfx.sh  TestCollision.cpp  TestIO.bat  TestIO.cpp  TestIO.sh  TestLinux.cpp  TestRenderer.cpp
code/Tool/: Console.cpp  Console.h  DEPENDS  ImGuiTools.cpp  ImGuiTools.h  ImageEncoder.cpp  ImageEncoder.h  MeshOptimizer.cpp  MeshOptimizer.h  ShaderCompiler.cpp  ShaderCompiler.h  ToolMain.cpp
data/: README.txt  make_file_list.bat
data/fonts/: arial-charset.txt  arial.jfnt  atlas-gen-farsi.bat  atlas-gen.bat
data/images/: texture.asset
data/models/Avocado/: Avocado.gltf
data/models/BoxWithColors/: BoxWithColors.gltf
data/models/Duck/: Duck.gltf  DuckCM.png.asset
data/models/HighPolyBox/: HighPolyBox.gltf
data/models/SimpleMeshes/: SimpleMeshes.gltf
doc/: Ascii.txt  CodingStandard.md  CppFeatures.txt  Quest2Specs.txt  TBR.txt  TestIO_results.txt  VulkanExtensions.txt  footer.md.html  index.md.html
doc/junkyard-assetman/: AssetData.drawio  ScratchAllocators.drawio  TasksDiagram.drawio  index.md.html
doc/junkyard-intro/: index.md.html
doc/junkyard-memory-01/: budget-alloc.drawio  frame-alloc.drawio  index.md.html  stack-alloc.drawio
doc/junkyard-relativeptr/: index.md.html  relativeptr.drawio
doc/junkyard-struct/: dependency-1.drawio  index.md.html
doc/misc/: Ascii.txt  CodingStandard.md  TestIO_results.txt
projects/Android/: JunkyardAndroid.10x_settings  JunkyardAndroid.NativeActivity.vcxproj  JunkyardAndroid.NativeActivity.vcxproj.filters
projects/Android/JunkyardAndroid/: JunkyardAndroid.androidproj  build.gradle  build.gradle.template
projects/CMake/: CMakeLists.txt  ConfigureMSVC.bat  ConfigureNinja.bat  ConfigureNinja.sh
projects/MacOS/Junkyard.xcodeproj/: project.pbxproj
projects/Windows/: Common.props  CommonDebug.props  CommonFinal.props  CommonRelease.props  EnableDebugSymbols.props  Junkyard.10x_settings  Junkyard.sln  Junkyard.vcxproj  Junkyard.vcxproj.filters  LinkJunkyard.props  StandardLibsReleaseStatic.props  Tools.props
projects/Windows/.claude/: settings.local.json
projects/Windows/JunkyardTool/: JunkyardTool.vcxproj
projects/msvc/: Common.props  CommonDebug.props  CommonRelease.props  Junkyard.10x_settings  Junkyard.sln  Junkyard.vcxproj  Junkyard.vcxproj.filters  Tools.props  Tracy.props
projects/msvc/JunkyardAndroid/: JunkyardAndroid.NativeActivity.vcxproj  JunkyardAndroid.NativeActivity.vcxproj.filters  (+1 more)
scripts/: android-enable-validation.bat  android-export-symbols.cmd  android-install-drivers.bat  android-install-run-dbg.bat  android-logcat.bat  android-rtether.bat  build-all.bat  build-assettest.cmd  build-run-tool.cmd  build-test.cmd  build-tool.cmd  build.cmd  check-code-deps.bat  close-logcats.cmd  profile-build.cmd
scripts/Android/: android-close-logcats.bat  android-disable-validation.bat  android-enable-validation.bat  android-export-symbols.cmd  android-install-drivers.bat  android-install-run-dbg.bat  android-logcat.bat  android-rtether.bat
scripts/Code/: amalgamate-core.bat  amalgamate-core.py  amalgamate-core.sh  check-code-deps.bat  check_code_deps.py  count-lines.bat  profile-build.cmd
scripts/Data/: generate_images.py  make_gltf_metadata.py
scripts/python/: check_code_deps.py  close_logcats.py  generate-images.py  generate_images.py  unifycore.py
test/: make_file_list.bat
tools/: regex_find_replace.txt
(+38 files in other folders)
